# vigger

./: .gitignore  CommandInterface.hs  Config.hs  Exceptions.hs  Ffmpeg.hs  Loader.hs  Main.hs  README.md  Trasher.hs  Watch.hs  config.example.yaml  vigger.cabal
src/: CommandInterface.hs  Config.hs  Deadman.hs  Exceptions.hs  Ffmpeg.hs  Formatter.hs  JournalInterface.hs  Loader.hs  Main.hs  Matrix.hs  SimpleInterface.hs  Temporary.hs  VideoTools.hs  Watch.hs
