cabal-version:       2.4
name:                vigger
version:             0.1.0.2
synopsis:            Video surveillance tool with external trigger support
description:         Tool for handling video surveillance with external
                     triggers.
bug-reports:         https://github.com/zouppen/vigger/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Joel Lehtonen
maintainer:          joel.lehtonen@iki.fi
copyright:           © 2022 Joel Lehtonen
category:            Video
extra-source-files:  README.md

executable vigger
  main-is:             Main.hs
  other-modules:       Deadman,
                       Trasher,
                       Config,
                       Ffmpeg,
                       Temporary,
                       Loader,
                       CommandInterface,
                       JournalInterface
                       Exceptions,
                       Watch
  other-extensions:    RecordWildCards, OverloadedStrings, DeriveGeneric
  build-depends:       base ^>=4.12 || ^>=4.13 ,
                       unix ^>=2.7.2.2,
                       filepath-bytestring ^>=1.4.2.1.6,
                       filepath ^>= 1.4.2.1,
                       directory ^>= 1.3.3,
                       stm ^>=2.5.0.0,
                       containers ^>=0.6.0.1,
                       yaml ^>=0.11.1,
                       aeson ^>=1.4.2,
                       optparse-applicative ^>=0.14 || ^>=0.15,
                       process ^>=1.6.5,
                       bytestring ^>=0.10.8.2,
                       temporary ^>=1.3,
                       hinotify ^>=0.4,
                       time ^>=1.8 || ^>=1.9,
                       async ^>=2.2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
